unpackaged/main/default/objects/ETT_Tools_Allocation__c/ETT_Tools_Allocation__c.object-meta.xml
<CustomObject>
    <label>Tools/Material Allocation</label>
    <nameField>
        <displayFormat>TA-{000}</displayFormat>
        <label>Tools Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tools/Material Allocation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>