unpackaged/main/default/objects/ETT_Tools_Allocation__c/fields/Allocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Status__c</fullName>
    <label>Allocation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved by Supervisor</fullName>
            </value>
            <value>
                <fullName>Approved by Storekeeper</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
            <value>
                <fullName>Almost Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>