unpackaged/main/default/objects/ETT_Tools_Allocation__c/fields/ETT_Allocated_Stocks__c.field-meta.xml
<CustomField>
    <fullName>ETT_Allocated_Stocks__c</fullName>
    <label>Allocated Stocks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>