unpackaged/main/default/objects/ETT_Tools_Allocation__c/fields/ETT_Allocated_Units_to_Station__c.field-meta.xml
<CustomField>
    <fullName>ETT_Allocated_Units_to_Station__c</fullName>
    <inlineHelpText>For record type of &quot;Tools&quot; this will be always 1 since the usage of single tool to be tracked</inlineHelpText>
    <label>Allocated Units to Station</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>