unpackaged/main/default/objects/ETT_Tools_Allocation__c/fields/ETT_Assigned_Work_Station__c.field-meta.xml
<CustomField>
    <fullName>ETT_Assigned_Work_Station__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assigned Work Station</label>
    <referenceTo>ETT_Work_Station__c</referenceTo>
    <relationshipName>Tools_Allocation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>