unpackaged/main/default/objects/ETT_Tools_Allocation__c/fields/ETT_Available_Stocks__c.field-meta.xml
<CustomField>
    <fullName>ETT_Available_Stocks__c</fullName>
    <formula>ETT_Allocated_Stocks__c-ETT_Used_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Stocks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>