unpackaged/main/default/objects/ETT_Tools_Allocation__c/fields/ETT_Previous_Tools_Allocation__c.field-meta.xml
<CustomField>
    <fullName>ETT_Previous_Tools_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Tools Allocation</label>
    <referenceTo>ETT_Tools_Allocation__c</referenceTo>
    <relationshipName>Previous_Tools_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>