unpackaged/main/default/objects/ETT_Tools_Allocation__c/fields/ETT_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ETT_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>