unpackaged/main/default/objects/ETT_Tools_Allocation__c/fields/ETT_Tools_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tools_Master__c</fullName>
    <label>Master Record</label>
    <referenceTo>ETT_Tools_Master__c</referenceTo>
    <relationshipLabel>Tools/Material Allocation</relationshipLabel>
    <relationshipName>Tools_Allocation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>