unpackaged/main/default/objects/ETT_Tools_Allocation__c/fields/ETT_Unit_type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Unit_type__c</fullName>
    <formula>TEXT(ETT_Tools_Master__r.ETT_Unit_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit type</label>
    <type>Text</type>
</CustomField>