unpackaged/main/default/objects/ETT_Tools_Allocation__c/fields/ETT_Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>ETT_Usage_Count__c</fullName>
    <inlineHelpText>Count of usage records under this allocation record</inlineHelpText>
    <label>Usage Count</label>
    <summaryForeignKey>ETT_Tools_Material_Usage__c.ETT_Tools_Material_Allocation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>