unpackaged/main/default/objects/ETT_Tools_Allocation__c/fields/ETT_Usage_Start_time__c.field-meta.xml
<CustomField>
    <fullName>ETT_Usage_Start_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Usage Start time</label>
    <type>DateTime</type>
</CustomField>